--- a/src/desktopicons/holoiso-install.desktop
+++ b/src/desktopicons/holoiso-install.desktop
@@ -4,10 +4,10 @@ Comment=
 Exec=sudo holoinstall
 GenericName[en_US]=
 GenericName=
-Icon=folder-download
+Icon=run-install
 MimeType=
-Name[en_US]=Install SteamOS
-Name=Install SteamOS
+Name[en_US]=Install HoloISO
+Name=Install HoloISO
 Path=
 StartupNotify=true
 Terminal=true
